@@ -61,6 +61,7 @@ class ShelfCreator(object):
            ('rename', file_id, target_path, work_path)
            ('change kind', file_id, target_kind, work_kind, target_path)
            ('modify text', file_id)
+           ('modify target', file_id, target_target, work_target)
         """
         for (file_id, paths, changed, versioned, parents, names, kind,
              executable) in self.iter_changes:
@@ -79,6 +80,11 @@ class ShelfCreator(object):
 
                 if kind[0] != kind [1]:
                     yield ('change kind', file_id, kind[0], kind[1], paths[0])
+                elif kind[0] == 'symlink':
+                    t_target = self.target_tree.get_symlink_target(file_id)
+                    w_target = self.work_tree.get_symlink_target(file_id)
+                    yield ('modify target', file_id, paths[0], t_target,
+                            w_target)
                 elif changed:
                     yield ('modify text', file_id)
 
@@ -95,6 +101,23 @@ class ShelfCreator(object):
         s_trans_id = self.shelf_transform.trans_id_file_id(file_id)
         shelf_parent = self.shelf_transform.trans_id_file_id(parents[1])
         self.shelf_transform.adjust_path(names[1], shelf_parent, s_trans_id)
+
+    def shelve_modify_target(self, file_id):
+        """Shelve a change of symlink target.
+
+        :param file_id: The file id of the symlink which changed target.
+        :param new_target: The target that the symlink should have due
+            to shelving.
+        """
+        new_target = self.target_tree.get_symlink_target(file_id)
+        w_trans_id = self.work_transform.trans_id_file_id(file_id)
+        self.work_transform.delete_contents(w_trans_id)
+        self.work_transform.create_symlink(new_target, w_trans_id)
+
+        old_target = self.work_tree.get_symlink_target(file_id)
+        s_trans_id = self.shelf_transform.trans_id_file_id(file_id)
+        self.shelf_transform.delete_contents(s_trans_id)
+        self.shelf_transform.create_symlink(old_target, s_trans_id)
 
     def shelve_lines(self, file_id, new_lines):
         """Shelve text changes to a file, using provided lines.
